--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@expo-google-fonts/rajdhani": "^0.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-auth-session": "~3.3.1",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-splash-screen": "~0.11.2",
