feat: Twitch authentication almost done, missing button
Co-authored-by: Igor Dummer <IgorDummer@users.noreply.github.com>

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -3,6 +3,7 @@
     "name": "gamecenter",
     "slug": "gamecenter",
     "version": "1.0.0",
+    "scheme": "gamecenter",
     "assetBundlePatterns": [
       "**/*"
     ]
