--- a/frontend/ios/gamecenter/Info.plist
+++ b/frontend/ios/gamecenter/Info.plist
@@ -51,5 +51,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<!-- Added by AuthSession -->
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>gizmos</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>example</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
