--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo-google-fonts/rajdhani": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.21.4",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "dotenv": "^10.0.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-auth-session": "~3.3.1",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
+    "expo-linking": "~2.3.1",
+    "expo-random": "~11.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
