--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo-google-fonts/rajdhani": "^0.2.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
@@ -36,13 +37,15 @@
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "^17.0.20",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.8",
+    "@types/styled-components-react-native": "^5.1.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-vector-icons": "^8.1.0",
     "typescript": "~4.0.0"
