--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,9 @@
 ; Twitch
-TWITCH_CLIENTID=70u2ib0ndnbmao4z6njvu85vaki5t1
+TWITCH_CLIENTID=
 TWITCH_API_URL='https://api.twitch.tv/'
 
 ; GameCenter
-GAMECENTER_API_URL=http://192.168.0.221:8080/
+GAMECENTER_API_URL=
 
 ; IGDB
 IGDB_API_URL=https://api.igdb.com/v4
