--- a/frontend/app.json
+++ b/frontend/app.json
@@ -6,7 +6,15 @@
     "scheme": "gamecenter",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "ios": {
+      "bundleIdentifier": "dev.lenkeigor.gamecenter",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "dev.lenkeigor.gamecenter",
+      "versionCode": 1
+    }
   },
   "name": "gamecenter"
 }
