--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 ; Twitch
 TWITCH_CLIENTID=
-TWITCH_API_URL='https://api.twitch.tv/'
+TWITCH_API_URL=https://api.twitch.tv/
 
 ; GameCenter
 GAMECENTER_API_URL=
