--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 ; Twitch
 TWITCH_CLIENTID=70u2ib0ndnbmao4z6njvu85vaki5t1
-TWITCH_API_URL='https://api.twitch.tv/'
+TWITCH_API_URL=https://api.twitch.tv/
 
 ; GameCenter
 GAMECENTER_API_URL=http://192.168.0.221:8080/
